2005-11-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Mark message for translation. Patch by Guilherme de S. Pastore,
	fixes bug #319988.

2005-11-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:
	* embed/mozilla/EphyAboutModule.h:

	Fix for mozilla API change.

2005-11-12  Philip Langdale  <philipl@mail.utexas.edu>

	* data/ui/epiphany-ui.xml: Remove accelerator actions
	for extra keybindings.

	* src/ephy-lockdown.c: (update_window):
	Don't manipulate removed "FileSave" action.

	* src/ephy-toolbar.c
	* src/ephy-toolbar.h: (ephy_toolbar_get_action_group):

	Add getter for the toolbar's action group.

	* src/ephy-window.c: (ephy_window_key_press_event):

	Transition over to the Galeon mechanism for handling
	extra keybindings. This maps the keybindings to
	actions so that no extra actions are required. The
	only subtlety is that some of the actions come from
	the toolbar, so access to its action group is required.

	* src/window-commands.c
	* src/window-commands.h: (window_cmd_go_back/forward/home):
	Remove the now unsued back/forward/home callbacks.

2005-11-12  Christian Persch  <chpe@cvs.gnome.org>

        * data/Makefile.am:

	Fix schemas install and add generate-font-schemas.py
	to EXTRA_DIST.

2005-11-12  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* data/default-prefs-common.js:
	* data/generate-font-schemas.py:
	* data/epiphany-fonts.schemas:

	Add schema entries for the fonts keys.

2005-11-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-11-12  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.2 ===

	* Makefile.am:

	Pass make distcheck.

	* NEWS:
	* configure.ac:

	Updated for 1.9.2.

	* lib/egg/egg-toolbars-model.c: (egg_toolbars_model_to_xml),
	(egg_toolbars_model_save), (parse_data_list), (parse_item_list),
	(parse_toolbars):
	* src/bookmarks/ephy-bookmarks-ui.c: