@@ -988,17 +988,13 @@ pdm_dialog_response_cb (GtkDialog *widget,
 			int response,
 			PdmDialog *dialog)
 {
-	switch (response)
+	if (response == GTK_RESPONSE_HELP)
 	{
-		case GTK_RESPONSE_CLOSE:
-			g_object_unref (dialog);
-			break;
-		case GTK_RESPONSE_HELP:
-			pdm_dialog_show_help (dialog);
-			break;
-		default:
-			break;
+		pdm_dialog_show_help (dialog);
+		return;
 	}
+
+	g_object_unref (dialog);
 }
 static void
 pdm_dialog_init (PdmDialog *dialog)
@@ -1019,6 +1015,9 @@ pdm_dialog_init (PdmDialog *dialog)
 				  properties[PROP_NOTEBOOK].id, &notebook,
 				  NULL);
 
+	ephy_gui_ensure_window_group (GTK_WINDOW (window));
+
+	gtk_window_set_role (GTK_WINDOW (window), "epiphany-cookie-manager");
 	gtk_window_set_icon_name (GTK_WINDOW (window), "web-browser");
 
 	g_signal_connect (window, "response",
